--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -660,7 +660,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div> <!-- 매출 화면 -->
 
         <div class="sales-footer">
             <div class="sales-footer-button">현금</div>
